--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width ,initial-scale=1">
 <title>Assignment solution for module 2</title>
-<link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="/css/mystyle.css">
 </head>
 <body>
 	<h1 >Responsive layout</h1>
